<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/greybg"
        tools:context=".engineer.PaymentCollectionActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_toolbar"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:background="@color/textColor"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/img_openDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrowback"
                android:layout_centerVertical="true"
                android:visibility="visible"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toolbarTitle"
                android:text="@string/paymentcollection"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_toRightOf="@id/img_openDrawer"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/padding_10">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paymentdooraddresshist"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/textColor"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notpaid"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/textColor"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/colorGrey"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/textColor"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/colorGrey"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:padding="@dimen/padding_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dooraddress"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/colorGrey"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:padding="@dimen/padding_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/colorGrey"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:padding="@dimen/padding_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paymentwait"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/colorGrey"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/padding_14"
                android:textColor="@color/colorGrey"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:layout_toRightOf="@id/img_openDrawer"/>






        </LinearLayout>
    </LinearLayout>

</layout>