
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_10"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_toolbar"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:src="@drawable/ic_arrowback"
            android:layout_centerVertical="true"
            android:visibility="visible"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Feedback"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/extraLargeTextSize"
            android:textColor="@color/textColor"
            android:paddingRight="@dimen/padding_10"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:layout_toRightOf="@id/iv_back"/>

    </RelativeLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/rl_toolbar"
    android:layout_above="@id/btn_next"
    >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_10"
        android:paddingTop="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:textSize="@dimen/largeTextSize"

        />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/tv_title"
            android:id="@+id/rv_feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            />

</RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_next"
        android:background="@drawable/btn_background"
        android:text="@string/sendFeedback"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:layout_alignParentBottom="true"/>





</RelativeLayout>
</layout>